# MyDndServer

./: README.md
doc/: C4.drawio  doc.md
src/: CMakeLists.txt  Library_Ayimea.pri  MyDndServer.pro  assets.qrc  databasecontroller.cpp  databasecontroller.h  login.ui  login.ui.autosave  main.cpp  mainwindow.ui  mydndserver.cpp  mydndserver.h  mydndserver.ui  register.ui  register.ui.autosave  src.md
src/Assets/: assets.qrc
src/Core/: entity.cpp  entity.h  task.h  taskpool.cpp  taskpool.h  view.cpp  view.h
src/LibraryAyimea/: Ayimea.qrc  Ayimea.rc  Library_Ayimea_global.h  crud_api.cpp  crud_api.h  crud_interface.cpp  crud_interface.h  getrequest.h  mysql.cpp  mysql.h  sql_connection.cpp  sql_connection.h  sqlserver.cpp  sqlserver.h  widgetapp.cpp  widgetapp.h
src/LibraryAyimea/css/: dark_amber.css  dark_lightgreen.css  dark_purple.css  dark_teal.css  light_blue_500.css  light_purple_500.css  light_red.css
src/LibraryAyimea/res/css/: dark_blue.css  dark_cyan.css  dark_pink.css  dark_red.css  dark_yellow.css  light_amber.css  light_blue.css  light_cyan.css  light_lightgreen.css  light_lightgreen_500.css  light_orange.css  light_pink.css  light_purple.css  light_red_500.css  light_teal.css  light_teal_500.css  light_yellow.css
src/LibraryAyimea/src/: LibraryAyimea_global.h  Library_Ayimea_global.h  libraryayimea.h
src/LibraryAyimea/src/App/: consoleapp.h  consolecolor.h  loghandler.h  serviceapp.h  widgetapp.h
src/LibraryAyimea/src/Database/: crud_api.h  crud_interface.h  mysql.h
src/Library_Ayimea/: Ayimea.qrc  Ayimea.rc  Library_Ayimea.pri  Library_Ayimea_global.h  sql_connection.h  widgetapp.h
src/Library_Ayimea/css/: Adaptic.css  Ayimea.css  dark.css  light.css  material.css.template
src/MyDndServer/: CMakeLists.txt  assets.qrc  main.cpp  mydndserver.cpp  mydndserver.h  register.ui
src/MyDungeonsAndDragonsServer/: CMakeLists.txt  main.cpp  mydungeonsanddragonsserver.cpp  mydungeonsanddragonsserver.h  mydungeonsanddragonsserver.ui
src/UI/: launcher.cpp  launcher.h  launcher.ui  login.cpp  login.h  login.ui  mydndserver.cpp  mydndserver.h  mydndserver.ui  register.cpp  register.ui
src/build-MyDndServer-Desktop_Qt_5_15_2_MSVC2019_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
src/build-MyDndServer-Desktop_Qt_5_15_2_MSVC2019_32bit-Release/: Makefile  Makefile.Debug  Makefile.Release
src/build-MyDndServer-Desktop_Qt_5_15_2_MSVC2019_32bit-Release/release/: Ayimea.res  moc_crud_api.cpp  moc_crud_interface.cpp  moc_mysql.cpp  moc_sql_connection.cpp
src/service/LibAyimea/: crud_interface.h  loghandler.h  mysql.h  serviceapp.h  sqlconnection.h
(+351 files in other folders)
